--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,13 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-@layer base {
-	@font-face {
-		font-family: "Clash Display";
-		font-weight: 200 700;
-		font-display: swap;
-		font-style: normal;
-		src: url(/fonts/ClashDisplay-Variable.ttf)
-			format("truetype");
-	}
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-
-@layer base {
-	@font-face {
-		font-family: "Manrope";
-		font-weight: 200 700;
-		font-display: swap;
-		font-style: normal;
-		src: url(/fonts/Manrope-Variable.ttf)
-			format("truetype");
-	}
-}
-
-
-@layer base {
-	@font-face {
-		font-family: "Inter";
-		font-weight: 200 700;
-		font-display: swap;
-		font-style: normal;
-		src: url(/fonts/Inter-Variable.ttf)
-			format("truetype");
-	}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
